                     drivers at http://team.vantronix.net/ar5k/.  Make sure you
                     upgrade your linux-wireless-tools to version 25 or you 
                     will not be able to place the card into monitor mode.)
                    Added network carrier classification (802.11, 11b, 11a,
                     etc)
Jan 02 2003  2.9.0  Fixed missing test of opendir() failing for ACPI
Jan 01 2003  2.9.0  Zero GREP_OPTIONS environment variable in the scripts
Dec 30 2002  2.9.0  Fixed minor error in the client netxml block (Ray Essick)
Dec 29 2002  2.8.0b Fixed another stupid set of oversights and released 2.8.0b
Dec 29 2002  2.8.0a Released 2.8.0a with minor bugfixes and updates.

Dec 29 2002  2.9.0  Fixed default Zaurus config
                    Added unlinking of kismet_curses to the install target
Dec 28 2002  2.9.0  Fixed silly error in kismet_monitor script
Dec 27 2002  2.9.0  Added log-dropped packets to the 'discard' packet count.
                    Fixed oddities with kismet_hopper and disabled multiple 
                     sources
Dec 24 2002  2.9.0  Started new Kismet development cycle

Dec 24 2002  2.8.0  Released Kismet 2.8.0.  Updates include:
                     Multiple capture sources
                     Multiple server support
                     Revamped client/server protocol
                     Packet processing speed boosts
                     Runtime WEP decoding
                     WSP100 Remote Sensor capture support
                     Cygwin support
                     Improved Turbocell/Karlnet dissection
                     Netmask range options for allowed clients
                     Client logging in XML
                     Dozens of bugfixes.

Dec 24 2002  2.7.1  Added writing of client info to the XML file, updated the
                     Kismet DTD.
                    Updated conf files to 2.8.0
Dec 23 2002  2.7.1  Kismet is now 1 year old!